# fourier-analyser

./: CMakeLists.txt
src/: main.cpp
test_data/: gen_data.py
